# pyrrBLUP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
baselines/loc_BeiJ/: kin_blup_predictions.csv  location.txt  mixed_solve_beta.csv  mixed_solve_u.csv  mixed_solve_varcomp.csv  phenotype.csv  samples.csv
baselines/loc_JiangX/: kin_blup_predictions.csv
docs/: mixed_solve.md
docs/superpowers/plans/: 2026-04-15-pyrrblup-core.md  2026-04-16-pyrrblup-batch-locations.md
docs/superpowers/specs/: 2026-04-15-pyrrblup-design.md  2026-04-16-pyrrblup-batch-locations-design.md
examples/: README.md
examples/medium_real_data/: README.md  genotype_012.csv  metadata.json  phenotype.csv
examples/minimal_real_data/: README.md  genotype_012.csv  metadata.json  phenotype.csv  run_example.py
scripts/: build_examples.py  build_r_baseline.R  build_r_baseline_batch.R  run_batch_pipeline.py  run_python_pipeline.py
src/pyrrblup/: __init__.py  amat.py  batch.py  compare.py  io.py  kin_blup.py  locations.py  mixed_solve.py  models.py  status.py
tests/: test_against_r_baseline.py  test_amat.py  test_baseline_artifacts_exist.py  test_batch.py  test_compare.py  test_io.py  test_kin_blup.py  test_locations.py  test_mixed_solve.py  test_smoke_import.py  test_status.py
